# jaxdax

./: README.md  pyproject.toml  setup.py
jaxdax/: core.py
jaxdax/_src/lib/: xla_bridge.py
tests/: test_jaxdax.py
